--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="/P_enlaces/nosotros.html" title="descripcion del negocio"> Nosotros</a></li>
                 <li><a href="/P_enlaces/catalogo.html" title="Catalogo">Nuestros Productos</a></li>
                 <li><a href="/P_enlaces/galeria.html" title="Fotos">Galeria</a></li>
-                <li><a href="/P_enlaces/nosotros.html" title="Nuestos Datos">Contactos</a></li>
+                <li><a href="/P_enlaces/contacto.html" title="Nuestos Datos">Contactos</a></li>
             </ul>
         </div>
     </div>
