--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="Encabezado">
+        
         <div id="menu">
             <ul>
                 <li><a href="index.html" title="Pagina Principal">Inicio</a></li>
@@ -22,6 +23,48 @@
         <div id="datos">
             <p>Visitanos y disfruta del mejor sabor</p>
             <p>Contamos con los mejores sabores</p>
+            <div class="producto">
+                <h2>Crepas de <p>Tres Quesos</p></h2>
+                <img src="/img/imagen7.jpeg">
+                <table>
+                    <tr>
+                        <th>Precio</th>
+                        <td>$11.99</td>
+                    </tr>
+                    <tr>
+                        <th>Ingredientes</th>
+                        <td>Harina, queso cheddar, queso suizo, queso parmesano.</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="producto">
+                <h2>Crepas de Manzana <p>Caramelizada</p></h2>
+                <img src="/img/imagen8.jpg">
+                <table>
+                    <tr>
+                        <th>Precio</th>
+                        <td>$9.99</td>
+                    </tr>
+                    <tr>
+                        <th>Ingredientes</th>
+                        <td>Harina, manzanas, caramelo.</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="producto">
+                <h2>Café Espresso</h2>
+                <img src="/img/imagen9.jpg">
+                <table>
+                    <tr>
+                        <th>Precio</th>
+                        <td>$3.49</td>
+                    </tr>
+                    <tr>
+                        <th>Ingredientes</th>
+                        <td>Cafe molido negro</td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
     <div class="piePagina"></div>
